--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ github_username: cvbate # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: cliobate # your LinkedIn user name
+linkedin_username: Clio Bate # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
+scholar_userid:  # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
@@ -104,7 +104,7 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  If you'd like to contact me, please message me on LinkedIN.
+  If you'd like to contact me, please message me on LinkedIn and mention my website!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
