test, hopefuly research will show

--- a/_config.yml
+++ b/_config.yml
@@ -467,9 +467,9 @@ jsonresume:
   - education
   - publications
   - projects
-  - volunteer
+  - research
   - awards
-  - certificates
+  - certificate
   - skills
   - languages
   - interests
