--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -50,7 +50,7 @@
       description: Learned about environmental non-profit work and presented a two-week practicum project that assessed vacant land in an adjacent town for PEC using ArcGISOnline.
 
     - title: Sustainability Outreach Intern
-      institution: CEEDS Smith College field station
+      institution: <i>CEEDS Smith College field station<i>
       year: 2018-2020
       description: Maintained field station, led tours, educated community, constructed, and maintained trails, and conducted research for sustainability.
 
