projects and cv upadtes

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -67,14 +67,14 @@
 - title: Aditional Experience
   type: time_table
   contents:
-    - title: Miyawaki Forest Directed Study
+    - title: GIS Consultant for Miyawaki Forest Monitoring Project
       institution: <i>Geography Dep., Clark University</i>
       year: Spring 2024 
-      description: Worked with a professor and the city of Worcester to monitor and evaluate the impact of two newly planted Miyawaki, or “Micro Forests,” intended to reduce urban heat island effect.
+      description: Worked with a Clark professor in a directed study to assist Worcester in planting two Miyawaki, or "Micro" Forests. Monitored and evaluated the local environmental impact of the forests through in-person data collection and GIS analysis. 
     - title: IDCE Department Social Chair
       institution: <i>Clark University</i>
       year: 2023-2024
-      description: Organized social events for the department’s student body to foster community growth and met regularly with student council and department heads to ensure the student council runs smoothly.
+      description: OOrganized social events for the department’s student body to foster community growth and met regularly with student council and department heads to ensure the student council runs smoothly. Lead a team in planning two end of the year graduation parties for 70+ people.
     - title: Teaching Assistant
       institution: <i>Geography Dep., Clark University</i>
       year: Fall 2023
@@ -87,4 +87,4 @@
 - title: Skills
   type: list
   contents:
-    - ArcPro, Terrset(IDRISI/Clark Labs), GISOnline, ArcGIS Storymaps, ArcGIS Field Maps, Python, R, RStudio, GitHub, GEE, Illustrator, Mailchimp, website design. 
+    - ArcPro, Terrset(IDRISI/Clark Labs), GISOnline, ArcGIS Storymaps, ArcGIS Field Maps, Python, R, RStudio, GitHub, GEE, Illustrator, Mailchimp, Canva, website design. 
